fix(overflow):UI overflow bug fixed

--- a/src/main.css
+++ b/src/main.css
@@ -5,7 +5,7 @@
  body {
      background-color: rgb(244, 244, 253);
      height: 100%;
-     overflow-y: hidden;
+     overflow: hidden;
  }
  
  .background {
